# ragproject

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  lint.yml  test.yml
core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
docs/: README.md
docs/temp/: temp.md
nginx/: nginx.conf
static/workspace/css/: workspace_home.css
static/workspace/js/: workspace_home.js
templates/: base.html
templates/icons/: github.svg.html  google.svg.html
templates/pages/: index.html
templates/partials/: sidebar.html
tests/: test_manage.py
users/: __init__.py  adapter.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
users/management/: __init__.py
users/management/commands/: __init__.py  init_setup.py  setup_social_providers.py
users/templates/pages/: create-account.html  home.html
workspace/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  validators.py  views.py
workspace/migrations/: 0001_initial.py  0002_alter_file_folder.py  0003_soft_delete_fields.py
workspace/templates/pages/: workspace_home.html
